instruction.css
body {
    background: #0000004b url(images/rust-background.jpg);
    background-attachment: fixed;
    backdrop-filter: blur(5px);
}

html {
    scroll-behavior: smooth; /*Делает плавное перемещение по странице, при нажатии на якорную ссылку*/
}

.outer-box { /*Стиль для блока со всем содержимым*/
    display: block;
    background-color: #fae6acab;
    
    border: 1px solid black;
    border-radius: 10px;

    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;

    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 20px;

    width: auto;
}

.outer-box a {
    color: #be6c0e;

    font-family:Arial, Helvetica, sans-serif;
    font-size:medium;

    text-shadow: black;
}

.content-li {
    display: block;
    background-color: #ffbb0020;

    border: 1px solid black;
    border-radius: 10px;

    padding: 1px;

    font-family: 'Courier New', monospace;
    overflow-x: auto;
}

.content-li a {
    color: #000000;

    font-family: 'Courier New', monospace;
    font-size: medium;

    text-decoration: none;
}

.code-box {
    display: block;
    background-color: #ffbb0020;

    border: 1px solid black;
    border-radius: 10px;

    padding-left: 15px;
    padding-right: 15px;

    font-family: 'Courier New', monospace;

    white-space: pre;
    overflow-x: auto;
}

.img-logo {
    display: block;

    width: 400px;
    height: auto;
    
    margin: 20px auto;
}

.img-logo img {
    width: 100%;
    height: 100%;
}

.italic-text {
    font-style: italic;
}

.default-text {
    text-align: left;

    font-family:Arial, Helvetica, sans-serif;
    font-size: medium;
}

.description-text {
    text-align: left;

    font-family:Arial, Helvetica, sans-serif;
    font-size: small;
    font-style: italic;
}

.command {
    font-weight: bold;
}

.description {
    color: rgba(0, 0, 0, 0.5);
}

